# revenue-brains

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  package-lock.json  package.json
apps/web/: eslint.config.mjs  package.json  prisma.config.ts
apps/web/prisma/: schema.prisma
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/lib/: agent-run-persistence.ts  api.ts  db.ts  extraction-persistence.ts  health.test.ts  health.ts  local-env.ts  mcp-tools.ts  uploads.ts  webhook-sync.test.ts  webhook-sync.ts  workspace.ts
docs/: agent-design.md  architecture.md  data-inspection.md  development-setup.md  mcp-strategy.md  product-spec.md  roadmap.md  scaffold-plan.md
docs/api/: README.md
services/agent/: README.md  pyproject.toml
services/agent/app/: __init__.py  document_parsing.py  errors.py  extraction.py  local_env.py  main.py  schemas.py
services/agent/app/agents/: __init__.py  autonomous_team_graph.py  ingestion_graph.py  qa_graph.py  supervisor_graph.py
services/agent/app/routers/: __init__.py  agent.py  documents.py  qa.py
services/agent/app/tools/: __init__.py  callback_tools.py  document_tools.py  extraction_tools.py  mcp_tools.py  vector_tools.py
services/agent/tests/: test_mcp_tools.py  test_routes.py
services/agent/tests/fixtures/: ambiguous.txt  contract.md  invoice.md  knowledge.md
services/mcp-server/: package.json  tsconfig.json
services/mcp-server/src/: auth.test.ts  auth.ts  config.ts  http.ts  internal-client.ts  local-env.ts  server.ts  stdio.ts  tools.test.ts  tools.ts
(+20 files in other folders)
