[project]
name = "revenue-brains-agent"
version = "0.1.0"
description = "FastAPI scaffold for the Revenue Brains Python agent service."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "langchain>=1.1.0",
    "langchain-openai>=1.1.0",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.0.0",
    "openai>=2.34.0",
    "pydantic>=2.8.0",
    "pypdf>=6.10.2",
    "python-docx>=1.2.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
